intermediate table studentQualification